--- a/07. Project Generative AI with RAG and LangChain/notebook/01. LangChain document loader.ipynb
+++ b/07. Project Generative AI with RAG and LangChain/notebook/01. LangChain document loader.ipynb
@@ -144,13 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After you install the libraries, restart your kernel. You can do that by clicking the **Restart the kernel** icon.\n",
-    "\n",
-    "<p style=\"text-align:left\">\n",
-    "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/1_Bd_EvpEzLH9BbxRXXUGQ/screenshot-to-replace.png\" width=\"50%\"/>\n",
-    "    </a>\n",
-    "</p>\n",
-    "\n"
+    "After you install the libraries, restart your kernel. You can do that by clicking the **Restart the kernel** icon.\n"
    ]
   },
   {
